--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
 </head>
 
 <body>
+  <header></header>
+  <p>Phaser Demo | Apple Catcher</p>
+  <main><canvas id="gameCanvas"></canvas></main>
+  <footer>
+    <p> Created by Gaspare 2023 </p>
+  </footer>
 
   <script type="module" src="/src/main.jsx"></script>
 </body>
