--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
 <body>
   <header></header>
   <p>Phaser Demo | Apple Catcher</p>
-  <main><canvas id="gameCanvas"></canvas></main>
+  <main><canvas id="gameCanvas"></canvas>
+    <div id="gameStartDiv" class="gameUI">
+      <h1> Apple Catcher</h1>
+      <p> You have 30 seconds to catch apples!</p>
+      <p> If you catch more than 10 apples you win.</p>
+      <p> If you catch less than 10 apples you lose.</p>
+      <p> Click the Start button to begin</p>
+      <button id="gameStartBtn">
+        <p> Start</p>
+      </button>
+    </div>
+    <div id="gameEndDiv" class="gameUI">
+      <p> Game Over</p>
+      <h1> You <span id="gameWinLoseSpan"> </span></h1>
+      <h1> Final Score: <span id="gameEndScoreSpan"></span> </h1>
+      <p> Refresh the Page to play again</p>
+    </div>
+  </main>
   <footer>
     <p> Created by Gaspare 2023 </p>
   </footer>
